# Endurance-Sim

./: .claudeignore  .gitignore  CLAUDE.md  README.md  docker-compose.yaml  pyproject.toml
.claude/: settings.local.json
Real-Car-Data-And-Stats/: 301_Univ_of_Connecticut-DSS-2025-05-05_1957.xlsx  EV Endurance 2025_CT-16EV_a_1596.drk  EV Endurance 2025_CT-16EV_a_1596.rrk  Endurance Tune2.txt  LVCU Code.txt  emrax228_hv_cc_motor_map_long.csv
archive/: README.md
backend/: errors.py  main.py  middleware.py
configs/: ct16ev.yaml  ct17ev.yaml
docker/: Dockerfile
docs/: ARCHITECTURE.md  DRIVER_MODEL_FIXES_POSTMORTEM_2026-04-16.md  PARALLEL_WORKSTREAMS.md  REMAINING_ISSUES.md  SIMULATOR_ISSUES.md  WEBAPP_REFOCUS_PLAN_2026-04-16.md  simulation_alignment_log.md
scripts/: clean_endurance_data.py  corner_speed_investigation.py  deep_dive_accuracy.py  diagnose_commands.py  force_rootcause_v3.py  replay_speed_profile_diagnosis.py  resistance_deep_dive.py  transplant_fx_coefficients.py  validate_driver_model.py  validate_tier3.py
tests/: test_analysis_init.py  test_battery_model.py  test_calibrated_strategy.py  test_cornering_solver.py  test_data_loader.py  test_driver_channel_validation.py  test_dynamics.py  test_engine.py  test_engine_envelope.py  test_load_transfer.py  test_pedal_profile_strategy.py  test_physics_constants.py  test_powertrain_model.py  test_regen_accounting.py  test_scoring.py  test_speed_envelope.py  test_strategies.py  test_telemetry_analysis.py  test_tire_model.py  test_track.py  test_validation.py  test_vehicle.py
webapp/: .env.example  (+4 more)
(+158 files in other folders)
